--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-@import 'bourbon/_bourbon';
+@import '../bourbon/_bourbon';
 
 // // Spacing
 // $modular-scale-ratio: $major-third;
