--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,19 +5,19 @@
       <a class="site-title" href="{{ site.baseurl }}/index2.html">{{ site.title }}</a>
       <ul class="site-nav-primary" role="menu">
         <li role="presentation">
-          <a role="menuitem" class="site-nav-link" href="/index2.html">Home</a>
+          <a role="menuitem" class="site-nav-link" href="{{ site.baseurl }}/index2.html">Home</a>
         </li>
         <li role="presentation">
-          <a role="menuitem" class="site-nav-link" href="/about/">About Us</a>
+          <a role="menuitem" class="site-nav-link" href="{{ site.baseurl }}/about/">About Us</a>
         </li>
         <li role="presentation">
-          <a role="menuitem" class="site-nav-link" href="/products/">Products</a>
+          <a role="menuitem" class="site-nav-link" href="{{ site.baseurl }}/products/">Products</a>
         </li>
         <li role="presentation">
-          <a role="menuitem" class="site-nav-link" href="/services/">Services</a>
+          <a role="menuitem" class="site-nav-link" href="{{ site.baseurl }}/services/">Services</a>
         </li>
         <li role="presentation">
-          <a role="menuitem" class="site-nav-link" href="/contact/">Contact</a>
+          <a role="menuitem" class="site-nav-link" href="{{ site.baseurl }}/contact/">Contact</a>
         </li>
       </ul>
     </nav>
