--- a/css/main.scss
+++ b/css/main.scss
@@ -107,7 +107,7 @@ body {
     width: 200px;
     height: 200px;
     text-indent: -1000px;
-    background: url('/images/Cahaba-Pressure-Logo-2-Color-Large-with-Treated-Forest-Products.png') center center no-repeat;
+    background: url('../images/Cahaba-Pressure-Logo-2-Color-Large-with-Treated-Forest-Products.png') center center no-repeat;
     background-size: 100%;
 }
 
