--- a/_includes/different-list.html
+++ b/_includes/different-list.html
@@ -1,6 +1,6 @@
 <ul>
-	<li><a href="/different/high-volume-fast-shipments/">High Volume Means Fast Shipments</a></li>
-	<li><a href="/different/large-variety-of-sizes/">Large Variety of Sizes</a></li>
-	<li><a href="/different/multiple-preservatives/">Multiple Preservatives</a></li>
-	<li><a href="/different/long-term-relationships/">Long-Term Relationships</a></li>
+	<li><a href="{{"/different/high-volume-fast-shipments/" | prepend: site.baseurl }}">High Volume Means Fast Shipments</a></li>
+	<li><a href="{{"/different/large-variety-of-sizes/" | prepend: site.baseurl }}">Large Variety of Sizes</a></li>
+	<li><a href="{{"/different/multiple-preservatives/" | prepend: site.baseurl }}">Multiple Preservatives</a></li>
+	<li><a href="{{"/different/long-term-relationships/" | prepend: site.baseurl }}">Long-Term Relationships</a></li>
 </ul>
