--- a/_includes/service-list.html
+++ b/_includes/service-list.html
@@ -1,6 +1,6 @@
 <ul>
-  <li><a href="/services/24-hour-emergency-service/">24 Hour Emergency Service</a></li>
-    <li><a href="/services/logistics/">Logistics</a></li>
-    <li><a href="/services/service-area/">Service Area</a></li>
-    <li><a href="/services/build-a-truck/">Build-a-Truck</a></li>
+  <li><a href="{{"/services/24-hour-emergency-service/" | prepend: site.baseurl }}">24 Hour Emergency Service</a></li>
+  <li><a href="{{"/services/logistics/" | prepend: site.baseurl }}">Logistics</a></li>
+  <li><a href="{{"/services/service-area/" | prepend: site.baseurl }}">Service Area</a></li>
+  <li><a href="{{"/services/build-a-truck/" | prepend: site.baseurl }}">Build-a-Truck</a></li>
 </ul>
