--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,26 @@
 <header role="banner" class="site-header">
-  <a class="site-title" href="{{ site.homepageurl | prepend: site.baseurl }}">
-    <span class="sr-only">{{ site.title }}</span>
-  </a>
-  <nav role="navigation" class="site-nav">
-    <ul class="site-nav-primary" role="menu">
-      <li role="presentation">
-        <a role="menuitem" class="site-nav-link" href="{{ site.homepageurl | prepend: site.baseurl }}">Home</a>
-      </li>
-      <li role="presentation">
-        <a role="menuitem" class="site-nav-link" href="{{ '/about/' | prepend: site.baseurl }}">About Us</a>
-      </li>
-      <li role="presentation">
-        <a role="menuitem" class="site-nav-link" href="{{ '/products/' | prepend: site.baseurl }}">Products</a>
-      </li>
-      <li role="presentation">
-        <a role="menuitem" class="site-nav-link" href="{{ '/services/' | prepend: site.baseurl }}">Services</a>
-      </li>
-      <li role="presentation">
-        <a role="menuitem" class="site-nav-link" href="{{ '/contact/' | prepend: site.baseurl }}">Contact</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="wrapper">
+    <a class="site-title" href="{{ site.homepageurl | prepend: site.baseurl }}">
+      <span class="sr-only">{{ site.title }}</span>
+    </a>
+    <nav role="navigation" class="site-nav">
+      <ul class="site-nav-primary" role="menu">
+        <li role="presentation">
+          <a role="menuitem" class="site-nav-link" href="{{ site.homepageurl | prepend: site.baseurl }}">Home</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" class="site-nav-link" href="{{ '/about/' | prepend: site.baseurl }}">About Us</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" class="site-nav-link" href="{{ '/products/' | prepend: site.baseurl }}">Products</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" class="site-nav-link" href="{{ '/services/' | prepend: site.baseurl }}">Services</a>
+        </li>
+        <li role="presentation">
+          <a role="menuitem" class="site-nav-link" href="{{ '/contact/' | prepend: site.baseurl }}">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
