--- a/_includes/product-list.html
+++ b/_includes/product-list.html
@@ -1,8 +1,8 @@
-<ul>
-  <li><a href="{{ "/products/poles/" | prepend: site.baseurl }}">Poles</a></li>
-  <li><a href="{{ "/products/piling/" | prepend: site.baseurl }}">Piling</a></li>
-  <li><a href="{{ "/products/crossties/" | prepend: site.baseurl }}">Crossties</a></li>
-  <li><a href="{{ "/products/agriculture-products/" | prepend: site.baseurl }}">Agriculture Products</a></li>
-  <li><a href="{{ "/products/bio-mass/" | prepend: site.baseurl }}">Bio Mass</a></li>
-  <li><a href="{{ "/products/custom-treating-services/" | prepend: site.baseurl }}">Custom Treating Services</a></li>
+<ul class="menu">
+  <li><a href="{{ '/products/poles/' | prepend: site.baseurl }}">Poles</a></li>
+  <li><a href="{{ '/products/piling/' | prepend: site.baseurl }}">Piling</a></li>
+  <li><a href="{{ '/products/crossties/' | prepend: site.baseurl }}">Crossties</a></li>
+  <li><a href="{{ '/products/agriculture-products/' | prepend: site.baseurl }}">Agriculture Products</a></li>
+  <li><a href="{{ '/products/bio-mass/' | prepend: site.baseurl }}">Bio Mass</a></li>
+  <li><a href="{{ '/products/custom-treating-services/' | prepend: site.baseurl }}">Custom Treating Services</a></li>
 </ul>
