--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,4 @@
 ---
-layout: homewrap
+layout: default
 ---
 {% include page-with-sidebar.html list="different-list.html" name="What makes Cahaba Pressure different" %}
