--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="page">
 
-  <article class="post-content">
+  <article class="page-content">
   	<h1 class="page-header">{{ page.title }}</h1>
     {{ content }}
   </article>
