--- a/_includes/page-with-sidebar.html
+++ b/_includes/page-with-sidebar.html
@@ -1,16 +1,18 @@
 <div class="page with-sidebar">
   <article class="page-content">
-  	<h1 class="page-header">{{ page.title }}</h1>
+  	{% if page.title %}<h1 class="page-header">{{ page.title }}</h1>{% endif %}
     {{ content }}
   </article>
 </div>
 <aside class="sidebar">
-	{% if include.name %}
-	<h2 class="page-subheader">
-		{% if include.link %}<a href="{{ include.link | prepend: site.baseurl }}">{% endif %}
-			{{include.name}}
-		{% if include.link %}</a>{% endif %}
-	</h2>
-	{% endif %}
-	{% include {{include.list}} %}
+	<div class="sidebar-container">
+		{% if include.name %}
+		<h2 class="page-subheader">
+			{% if include.link %}<a href="{{ include.link | prepend: site.baseurl }}">{% endif %}
+				{{include.name}}
+			{% if include.link %}</a>{% endif %}
+		</h2>
+		{% endif %}
+		{% include {{include.list}} %}
+	</div>
 </aside>
