--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,15 @@ $em-base: 18px;
 // Spacing
 $modular-scale-ratio: $major-third;
 $spacing-unit: 1em;
-$wrapper-width: em(1000);
+$wrapper-width: em(1100);
+
+
+// Media Queries 
+
+$small-screen: "screen";
+$medium-screen: "screen and (min-width: 640px)";
+$large-screen: "screen and (min-width: 1024px)";
+$xlarge-screen: "screen and (min-width: 1200px)";
 
 
 
@@ -41,6 +49,7 @@ $primary-color-darker: darken($red, 10%);
 $secondary-color: $gray;
 $tertiary-color: $silver;
 $shadow: rgba(black, 0.2);
+$highlight: rgba(white, 0.2);
 
 @import "reset";
 
@@ -72,6 +81,9 @@ $shadow: rgba(black, 0.2);
 
 body {
     background-color: $tertiary-color;
+    @include linear-gradient(to bottom, $secondary-color 0%, $tertiary-color 50%, $tertiary-color 100%, $fallback: $tertiary-color);
+    background-repeat: repeat-x;
+    background-size: 100% 640px;
     @extend %base-font;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -90,6 +102,18 @@ strong, b {
     font-weight: 700;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+// ie8 hack
+@media \0screen {
+  img { 
+    width: auto; /* for ie 8 */
+  }
+}
+
 // hiding elements for screen reader usage only
 .sr-only {
     position: absolute;
@@ -101,13 +125,44 @@ strong, b {
     clip: rect(0,0,0,0);
     border: 0;
 }
+
 .container {
-    max-width: em(1400);
+    position: relative;
+    max-width: em(1200);
     margin: 0 auto;
-    //border: 1px solid $shadow;
-    //border-width: 0 1px 1px 1px;
     box-shadow: 0 0 1px 0px $shadow;
     background-color: white;
+}
+
+.wrapper {
+    @extend %clearfix;
+    padding-left: $spacing-unit;
+    padding-right: $spacing-unit;
+    max-width: $wrapper-width;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.columns {
+    margin-left: -$spacing-unit;
+    margin-right: -$spacing-unit;
+    @extend %clearfix;
+    > li {
+        float: left;
+        width: 100%;
+        padding-left: $spacing-unit;
+        padding-right: $spacing-unit;
+        box-sizing: border-box;
+    }
+    &.two-columns > li {
+        width: 50%;
+    }
+    &.three-columns > li {
+        width: 33.3333333333%;
+    }
+    &.four-columns > li {
+        width: 25%;
+    }
 }
 
 %header-style {
@@ -120,35 +175,42 @@ strong, b {
 .page-header {
     @extend %header-style;
     color: $primary-color;
-    @include font-and-line(3, 0.5);
-    border-bottom: 4px solid $shadow;
+    @include font-and-line(1, 0.5);
+    @media #{$medium-screen} {
+        @include font-and-line(3, 0.5);
+    }
+    border-bottom: 1px solid $shadow;
 }
 
 .page-subheader {
     @extend %header-style;
     color: $secondary-color;
-    @include font-and-line(2, 0.5);
-    border-bottom: 1px dashed $secondary-color;
+    @include font-and-line(1, 0.5);
+    @media #{$medium-screen} {
+        @include font-and-line(2, 0.5);
+    }
+    border-bottom: 1px dashed $shadow;
 }
 
 .site-header {
-    background-color: white;
-    box-shadow: 0 0 1px 0 $shadow;
-    //border-bottom: 1px solid $shadow;
+    background-color: $primary-color;
+    box-shadow: 0 0 1px 0 $highlight;
     > .wrapper {
         position: relative;
     }
 }
 
 $site-logo-width: em(200px);
+$site-logo-height: em(220px);
 
 .site-title {
     display: inline-block;
     position: absolute;
+    z-index: 1;
     left: $spacing-unit;
     top: 0;
     width: $site-logo-width;
-    height: em(220px);
+    height: $site-logo-height;
     background: white url('../images/Cahaba-Pressure-Logo-2-Color-Large-with-Treated-Forest-Products.png') center center no-repeat;
     background-size: 100%;
     @include border-bottom-radius(5px);
@@ -172,63 +234,198 @@ $site-logo-width: em(200px);
     @extend %header-font;
     display: inline-block;
     padding: ($spacing-unit/2);
-    color: $secondary-color;
+    color: white;
     text-decoration: none;
     font-size: modular-scale(2);
     text-transform: uppercase;
-    @include transition(color 200ms linear);
+    @include transition(background-color 200ms linear);
     &:hover, &:focus {
-        color: $primary-color;
-        //background-color: $shadow;
+        color: white;
+        background-color: $shadow;
     }
 }
 
-.wrapper {
-    @extend %clearfix;
-    padding-left: $spacing-unit;
-    padding-right: $spacing-unit;
-    max-width: $wrapper-width;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.page-content p {
+%standard-font-size {
     font-size: modular-scale(0);
-    line-height: modular-scale(1)*1.2; 
+    line-height: modular-scale(0)*1.2;
+    @media #{$medium-screen} {
+        font-size: modular-scale(1);
+        line-height: modular-scale(1)*1.2;    
+    }
+    @media #{$large-screen} {
+        font-size: modular-scale(0);
+        line-height: modular-scale(0)*1.2; 
+    }
+    @media #{$xlarge-screen} {
+        font-size: modular-scale(1);
+        line-height: modular-scale(1)*1.2; 
+    }
 }
 
-.page-content .page-header + p {
-    @extend %pull-quote-font;
-    font-size: modular-scale(1);
-    line-height: modular-scale(1)*1.2;
+%list-style {
+    list-style-position: inside;
+    padding-left: $spacing-unit*0.5;
+    padding-bottom: $spacing-unit*0.5;
+    font-size: 1em;
+    > li {
+        @extend %standard-font-size;
+    }
+}
+
+.page-content {
+    p {
+        @extend %standard-font-size;
+        margin-bottom: $spacing-unit*0.5;
+    }
+    .page-header + p {
+        @extend %pull-quote-font;
+        font-size: modular-scale(1);
+        line-height: modular-scale(0)*1.2;
+        @media #{$medium-screen} {
+            font-size: modular-scale(2);
+            line-height: modular-scale(1)*1.2;
+        }
+        @media #{$large-screen} {
+            font-size: modular-scale(1);
+            line-height: modular-scale(0)*1.2;
+        }
+        @media #{$xlarge-screen} {
+            font-size: modular-scale(2);
+            line-height: modular-scale(1)*1.2;
+        }
+    }
+    h2 {
+        @extend .page-subheader;
+    }
+    ul:not(.menu):not(.columns) {
+        @extend %list-style;
+        list-style-type: circle;
+    }
+    ol:not(.menu):not(.columns) {
+        @extend %list-style;
+        list-style-type: decimal;
+    }
+    strong, b {
+        text-transform: uppercase;
+    }
+    .menu {
+        @extend .columns;
+        @extend .three-columns;
+    }
 }
 
 .page {
     &.with-sidebar {
         > .page-content {
-            padding-right: $spacing-unit;
+            padding-right: $spacing-unit*2;
         }
         $sidebar-width: 33%;
-        float: left;
-        width: (100% - $sidebar-width);
-        & + .sidebar {
-            float: right;
-            width: $sidebar-width;
+        @media #{$large-screen} {
+            float: left;
+            width: (100% - $sidebar-width);
+            & + .sidebar {
+                float: right;
+                width: $sidebar-width;
+                
+            }
+        } // end @media
+    }
+}
+
+.sidebar-container {
+    margin-top: $spacing-unit*2;
+    padding: $spacing-unit;
+    border-radius: 5px;
+    background-color: $tertiary-color;
+    > .page-subheader:first-child {
+        margin-top: 0;
+    }
+    > .menu {
+        font-size: modular-scale(1);
+        > li > a {
+            display: block;
+            padding-top: $spacing-unit*0.25;
+            padding-bottom: $spacing-unit*0.25;
         }
     }
 }
 
-.site-footer > .wrapper > p {
-    margin-top: $spacing-unit;
+.site-footer {
+    background-color: $secondary-color;
+    margin-top: $spacing-unit*2;
     padding-top: $spacing-unit;
     padding-bottom: $spacing-unit;
-    border-top: 1px dashed $secondary-color; 
+    color: $tertiary-color;
+}
+
+.hero-wrapper {
+    background-color: $secondary-color;
+    @include linear-gradient(to bottom, lighten($secondary-color, 20%), $secondary-color, $fallback: $secondary-color);
+    background-repeat: repeat-x;
+    background-size: 100%;
+    min-height: ($site-logo-height - $spacing-unit*4);
+    position: relative;
+    @media #{$medium-screen} {
+        &:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: 50px;
+            background: url("../images/curve.svg") center bottom no-repeat;
+            background-size: fit;
+        }
+    }
+}
+
+@include keyframes(fadeIn) {
+  from {
+    @include transform(translateY(-50px));
+    opacity: 0;
+  }
+  to {
+    @include transform(translateY(0));
+    opacity: 1;
+  }
+}
+
+@mixin animation-fadedown($delay) {
+  // Apply the fadeIn keyframes. Each animation 
+  // will take 0.3s and have an ease-in-out
+  @include animation(fadeIn 900ms ease-in-out);
+  // This animation should only play once
+  @include animation-iteration-count(1);
+  // Make sure the element maintains it's 
+  // final visual state (i.e. 100% opacity)
+  @include animation-fill-mode(forwards);
+  // Delay - don't start the animation until we say so
+  @include animation-delay($delay);
 }
 
 .hero {
-    background: $secondary-color url('../images/slider01.jpg') center top no-repeat;
-    background-size: cover;
-    min-height: em(480);
+    > figcaption {
+        text-transform: uppercase;
+        padding: $spacing-unit;
+        color: white;
+        @media #{$medium-screen} {
+            position: absolute;
+            font-size: modular-scale(1);
+            background-color: transparent;
+            letter-spacing: 0.1em;
+            color: $primary-color;
+            padding: 0;
+            opacity: 0;
+            @include animation-fadedown(0);
+            top: $spacing-unit*2;
+            right: $spacing-unit;
+        }
+        @media #{$large-screen} {
+            font-size: modular-scale(2);
+        }
+        @media #{$xlarge-screen} {
+            font-size: modular-scale(3);
+        }
+    }
 }
-
 
