--- a/_includes/about-list.html
+++ b/_includes/about-list.html
@@ -1,7 +1,27 @@
 <ul class="menu">
-	<li><a href="{{'/about/history/' | prepend: site.baseurl }}">History</a></li>
-	<li><a href="{{'/about/commitment/' | prepend: site.baseurl }}">Commitment</a></li>
-	<li><a href="{{'/about/sustainability/' | prepend: site.baseurl }}">Sustainability</a></li>
-	<li><a href="{{'/about/operations/' | prepend: site.baseurl }}">Operations</a></li>
-	<li><a href="{{'/about/plant/' | prepend: site.baseurl }}">Our Plant Site</a></li> 
+	<li>
+		<a href="{{'/about/history/' | prepend: site.baseurl }}">
+			History
+		</a>
+	</li>
+	<li>
+		<a href="{{'/about/commitment/' | prepend: site.baseurl }}">
+			Commitment
+		</a>
+	</li>
+	<li>
+		<a href="{{'/about/sustainability/' | prepend: site.baseurl }}">
+			Sustainability
+		</a>
+	</li>
+	<li>
+		<a href="{{'/about/operations/' | prepend: site.baseurl }}">
+			Operations
+		</a>
+	</li>
+	<li>
+		<a href="{{'/about/plant/' | prepend: site.baseurl }}">
+			Our Plant Site
+		</a>
+	</li> 
 </ul>
