--- a/_includes/product-list.html
+++ b/_includes/product-list.html
@@ -1,8 +1,50 @@
 <ul class="menu">
-  <li><a href="{{ '/products/poles/' | prepend: site.baseurl }}">Poles</a></li>
-  <li><a href="{{ '/products/piling/' | prepend: site.baseurl }}">Piling</a></li>
-  <li><a href="{{ '/products/crossties/' | prepend: site.baseurl }}">Crossties</a></li>
-  <li><a href="{{ '/products/agriculture-products/' | prepend: site.baseurl }}">Agriculture Products</a></li>
-  <li><a href="{{ '/products/bio-mass/' | prepend: site.baseurl }}">Bio Mass</a></li>
-  <li><a href="{{ '/products/custom-treating-services/' | prepend: site.baseurl }}">Custom Treating Services</a></li>
+  <li>
+  	<a href="{{ '/products/poles/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Poles
+  	</a>
+  </li>
+  <li>
+  	<a href="{{ '/products/piling/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Piling
+  	</a>
+  </li>
+  <li>
+  	<a href="{{ '/products/crossties/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/slider01.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Crossties
+  	</a>
+  </li>
+  <li>
+  	<a href="{{ '/products/agriculture-products/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Agriculture Products
+  	</a>
+  </li>
+  <li>
+  	<a href="{{ '/products/bio-mass/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Bio Mass
+  	</a>
+  </li>
+  <li>
+  	<a href="{{ '/products/custom-treating-services/' | prepend: site.baseurl }}">
+  		{% if include.withpic %}
+		<img src="{{'/images/FPO.jpg' | prepend: site.baseurl }}" alt="">
+  		{% endif %}
+  		Custom Treating Services
+  	</a>
+  </li>
 </ul>
