--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <div class="container">
       {% include header.html %}
 
-      <main role="main">
+      <main class="main" role="main">
         <div class="hero-wrapper">
           {% if page.hero %}
             <figure class="hero">
